fixed wrapping

--- a/css/technical-documentation.css
+++ b/css/technical-documentation.css
@@ -128,16 +128,22 @@ body a {
     font-weight: 5px;
     margin-bottom: 2rem;
 }
-
+.main-ind-topic{
+    margin-bottom: 2.5rem;
+}
 .main-ind-topic>p {
     margin-bottom: 1rem;
 }
 
 .main-ind-topic>h3 {
     font-size: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin:2rem 0 1.5rem;
     border-bottom: 1px solid;
     padding-bottom: 1rem;
+}
+
+.main-ind-topic>pre{
+    white-space: pre-wrap;
 }
 
 .syntax-div {
@@ -149,7 +155,7 @@ body a {
 }
 
 .example-div {
-    margin: 2rem 0;
+    margin: 2.5rem 0;
 }
 
 .example-div h4 {
